# faceRecognition-jna

./: CMakeLists.txt  README.md
java/: jnaTest.java
src/: detect.cpp  face_jna.cpp  recognize.h
